add daemon mailbox foundation
